<resources>
    <string name="app_name">Breadit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="thumbnail_description">Thumbnail image for a post</string>
    <string name="failed_to_refresh">Could not refresh list.</string>
    <string name="loading_submissions">Loading more submissions…</string>
    <string name="failed_to_load">Failed to load more submissions. Click to try again.</string>
    <string name="nothing_here">There\'s nothing here!</string>
    <string name="subreddit_does_not_exist">This subreddit does not exist.</string>
    <string name="share">Share</string>
    <string name="open_link_browser">Open in browser</string>
    <string name="reply_hint">Reply to</string>
    <string name="cancel">Cancel</string>
    <string name="reply">Reply</string>
    <string name="view_link">View link</string>
    <string name="archived">Sorry, this submission is archived. Commenting is not allowed.</string>
    <string name="viewing_single_thread">You\'re viewing a single comment\'s thread.</string>
    <string name="view_all_comments">View all comments</string>
    <string name="view_full_context">View the full context</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="view_profile">View profile</string>
    <string name="message_user">Message user</string>
    <string name="expand_links">Expand links</string>
    <plurals name="points">
        <item quantity="one">point</item>
        <item quantity="other">points</item>
    </plurals>
    <string name="comments">Comments</string>
    <string name="close">Close</string>
    <string name="load_more_comments">Load more comments…</string>
    <string name="share_with">Share link with…</string>
    <string name="content">Content</string>
    <string name="action_compose_message">Compose message</string>
    <string name="filter">Filter by</string>
    <string name="post_title">Submission title</string>
    <string name="captcha_response">Captcha response</string>
    <string name="new_text_post">New text post</string>
    <string name="subreddit_name">Subreddit name</string>
    <string name="nsfw">NSFW</string>
    <string name="self_post">Self-post</string>
    <string name="send_replies_inbox">Send replies to my inbox</string>
    <string name="subject">Subject</string>
    <string name="enter_body">Enter body text</string>
    <string name="send">Send</string>
    <string name="please_enter_body">Please enter a body for the message</string>
    <string name="please_enter_username">Please enter a recipient for the message</string>
    <string name="please_enter_subject">Please enter a subject for the message</string>
    <string name="compose_message">Compose message</string>
    <string name="remove_viewed_front_title">Hide from FrontPage</string>
    <string name="remove_viewed_front">Remove viewed submissions from FrontPage view</string>
    <string name="remove_viewed_sub_title">Hide from Subreddit</string>
    <string name="remove_viewed_sub">Remove viewed submissions from Subreddit view</string>
    <string name="hide_nsfw">Hide NSFW submissions</string>
    <string name="history">History</string>
    <string name="nsfw_settings">NSFW</string>
    <string name="warn_nsfw_title">NSFW Safeguard</string>
    <string name="warn_nsfw">Warn before entering NSFW Subreddit</string>
    <string name="users">Users</string>
    <string name="login">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="switch_users">Switch users or log out</string>
    <string name="clear_history">Clear History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="are_you_sure">Are you sure you want to clear your history?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="select_an_account">Select an account</string>
    <string name="select_to_remove">Select an account to remove</string>
    <string name="sorting_settings">Sorting</string>
    <string name="default_comment_sort_title">Default comment sort</string>
    <string name="default_comment_sort">Default sort type when viewing comments</string>
    <string name="network">Network</string>
    <string name="notification_interval">Notification interval</string>
    <string name="low_bandwidth_mode">Low Bandwidth Mode</string>
    <string name="low_bandwidth_mode_summary">Don\'t load image or video previews.</string>
    <string name="show_thumbnails">Show Thumbnails</string>
    <string name="show_thumbnails_summary">Load link thumbnails.</string>
    <string name="search_sub_hint">Go to a Subreddit</string>
    <string name="currently_viewing">Currently Viewing</string>
    <string name="subscribe">Subscribed</string>
    <string name="sort_by">Sorted by</string>
    <string name="description">Description</string>
    <plurals name="subscribers">
        <item quantity="one">subscriber</item>
        <item quantity="other">subscribers</item>
    </plurals>
    <string name="mark_unread">Mark unread</string>
    <string name="block_user">Block user</string>
    <string name="view_context">View context</string>
    <string name="report">Report</string>
    <string name="full_comments">Full comments</string>
    <string name="comment_reply">Comment reply</string>
    <string name="on">on</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="via">via</string>
    <string name="inbox">Inbox</string>
    <string name="go">Go</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="front_page">Front Page</string>
    <string name="logged_out">Logged out</string>
    <string name="settings">Settings</string>
    <string name="subreddits">Subreddits</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="saved">Saved</string>
    <string name="toggle_description">Toggle description</string>
    <string name="load_high_quality">Load high quality image</string>
    <string name="say_something">Say something</string>
    <string name="hot">Hot</string>
    <string name="top">Top</string>
    <string name="new_string">New</string>
    <string name="controversial">Controversial</string>
    <string name="rising">Rising</string>
    <string name="hour">This hour</string>
    <string name="today">Today</string>
    <string name="week">This week</string>
    <string name="month">This month</string>
    <string name="year">This year</string>
    <string name="all">All time</string>
    <string name="best">Best</string>
    <string name="old">Old</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="mark_nsfw">Mark NSFW</string>
    <string name="unmark_nsfw">Unmark NSFW</string>
    <string name="approve">Approve</string>
    <string name="remove">Remove</string>
    <string name="spam">Spam</string>
    <string name="enter_reply_text">Reply body</string>
    <string name="send_reply">Send Reply</string>
    <string name="sending_reply">Sending reply. Please wait.</string>
    <string name="failed_to_post_reply">Failed to post reply. Please check your network connection
        and try again.</string>
    <string name="compose_to_hint">Username or /r/Subreddit</string>
    <string name="sending_message">Sending message…</string>
    <string name="message_sent">Message sent</string>
    <string name="reload_captcha">New Captcha</string>
    <string name="continue_string">Continue</string>
    <string name="failed_captcha">Failed captcha. Please try again.</string>
    <string name="share_link">Share link</string>
    <string name="share_comments">Share comments</string>
    <string name="please_enter_a_username">Please enter a username</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="logging_in">Logging in. Please wait.</string>
    <string name="invalid_entries">Incorrect username or password. Please try again.</string>
    <string name="recovery_email">Recovery Email (Optional)</string>
    <string name="register">Register</string>
    <string name="username_available">Username is available</string>
    <string name="username_not_available">Username taken</string>
    <string name="checking_availability">Checking availability</string>
    <string name="attempting_to_create">Attempting to create account. Please wait.</string>
    <string name="email_me">Email me</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="ratelimited">Ratelimited. Please try again in</string>
    <string name="minutes">minutes</string>
    <string name="no_email_for_user">The user you\'re trying to recover the password for does not
            have an email on record.</string>
    <string name="user_doesnt_exist">Specified user doesn\'t exist.</string>
    <string name="email_sent">Recovery email sent.</string>
    <string name="send_recovery_email">Send Recovery Email</string>
    <string name="submit_to">Submit to /r/</string>
    <string name="subreddit">Subreddit</string>
    <string name="submitting">Submitting</string>
    <string name="sub_doesnt_exist">The subreddit that you attempted to submit to doesn\'t exist.</string>
    <string name="link">Link</string>
    <string name="imgur">Imgur Upload</string>
    <string name="url">URL</string>
    <string name="suggest_title">Suggest title</string>
    <string name="no_title_found">No title found.</string>
    <string name="self_text">Self text</string>
    <string name="network_problems">Network problems. Check your network and try again.</string>
    <string name="messages">Messages</string>
    <string name="compose_to">Compose to</string>
    <plurals name="new_messages">
        <item quantity="one">New Message</item>
        <item quantity="other">New Messages</item>
    </plurals>
    <string name="theres_nothing_here">There\'s nothing here.</string>
    <string name="user">User</string>
    <string name="link_karma">Link Karma</string>
    <string name="comment_karma">Comment Karma</string>
    <string name="message">Message</string>
    <string name="friend">Friend</string>
    <string name="zero">0</string>
    <string name="go_forward">Go forward</string>
    <string name="friends_since">Friends since</string>
    <string name="go_to_subreddit">Go to subreddit</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="special">Special</string>
    <string name="recents">Recents</string>
    <string name="trending">Trending</string>
    <string name="moderator">Moderator</string>
    <string name="type_a_subreddit_name">Type a subreddit name</string>
    <string name="select_subreddit">Select Subreddit</string>
</resources>