<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText android:id="@+id/username"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:gravity="center"/>

    <EditText android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button android:id="@+id/login_cancel"
            android:text="@string/cancel"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/login_confirm"
            android:text="@string/confirm"
            style="?android:buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>
</LinearLayout>