<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/username"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"/>

    <EditText android:id="@+id/subject"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="100"
        android:hint="@string/subject"/>

    <EditText android:id="@+id/body"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:maxLength="10000"
        android:hint="@string/enter_body"/>

    <View android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/dark_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:buttonBarButtonStyle"/>

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/dark_gray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <Button android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            style="?android:buttonBarButtonStyle"/>

    </LinearLayout>
</LinearLayout>