<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textCapSentences"
        android:hint="@string/post_title"
        android:fontFamily="sans-serif-thin"
        android:gravity="top|start"
        android:maxLines="3"/>

    <EditText android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:inputType="textUri"
        android:hint="@string/url"
        android:fontFamily="sans-serif-thin"/>

    <Button android:id="@+id/suggest_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggest_title"/>

</LinearLayout>