<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:clickable="true">

    <include layout="@layout/navigation_spacer"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="8dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/search_subreddit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionGo"
                android:imeActionLabel="@string/go"
                android:textColor="@color/mid_gray"
                android:hint="@string/search_sub_hint"/>

            <ImageButton android:id="@+id/clear"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:paddingEnd="8dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp" />

        </FrameLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/search_button"
            android:src="@android:drawable/ic_menu_send"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <Spinner android:id="@+id/account_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <TextView android:id="@+id/home"
        style="@style/NavigationItemText"
        android:textStyle="bold"
        android:text="@string/home"/>

    <TextView android:id="@+id/inbox"
        style="@style/NavigationItemText"
        android:text="@string/inbox"/>

    <TextView android:id="@+id/submit"
        style="@style/NavigationItemText"
        android:text="@string/submit"/>

    <TextView android:id="@+id/preferences"
        style="@style/NavigationItemText"
        android:text="@string/preferences"/>

</LinearLayout>
