<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    
    <EditText android:id="@+id/reply_body"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top"
        android:hint="@string/reply_hint"/>

    <View android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/dark_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/cancel_reply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:buttonBarButtonStyle"/>

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/dark_gray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <Button android:id="@+id/reply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reply"
            style="?android:buttonBarButtonStyle"/>

    </LinearLayout>
</LinearLayout>